--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
         display: block;
         width: 100vw;
         height: 100vh;
-        background-image: linear-gradient(rgb(0, 255, 195),rgb(154, 154, 163), rgb(65, 65, 65)) ;
+        background-image: linear-gradient(rgb(0, 255, 195),rgb(154, 154, 163), rgb(65, 65, 65));
+        background-repeat: no-repeat;
       }
     </style>
   </head>
