--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <style>
       body {
-        display: block;
+        display: block flex;
         width: 100vw;
         height: 100vh;
         background-image: linear-gradient(rgb(0, 255, 195),rgb(154, 154, 163), rgb(65, 65, 65));
